fixed: runner container is visible at bottom after close

--- a/main.css
+++ b/main.css
@@ -161,7 +161,7 @@ body {
 .runner-container {
     width: 100%;
     height: 0px;
-    padding: 16px 16px 0px 16px;
+    padding: 0px;
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -180,6 +180,7 @@ body {
 }
 .runner-container.active{
     height: 92%;
+    padding: 16px 16px 0px 16px;
 }
 .close-runner{
     width: 100%;
